add struct RegisterEmployeeRequest and RegisterCustomerRequest and fix register function, add git ignore
